--- a/index.html
+++ b/index.html
@@ -333,24 +333,11 @@
     if (pattern != curPattern) {
       console.log('update pattern');
       curPattern = pattern;
-      let table = query('#pattern-table');
-      table.textContent = '';
-      for (let row = 0; row < numRows; row++) {
-        let tr = document.createElement('tr');
-        table.appendChild(tr);
-        for (let c = 0; c < module.numChannels; c++) {
-          const c_row = row, c_c = c;
-          let cell = pattern[c][row];
-          let td = document.createElement('td');
-          td.textContent = cellString(cell);
-          td.onclick = () => {
-            selRow = c_row;
-            selChannel = c_c;
-            updateSelCell();
-          }
-          tr.appendChild(td);
-        }
-      }
+      makePatternTable(module, pattern, query('#pattern-table'), (r, c) => {
+        selRow = r;
+        selChannel = c;
+        updateSelCell();
+      });
       updateSelCell();
     }
   }
