--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
   <input style="width:36pt;" type="number" value="36" id="jam-pitch" oninput="query('#jam-pitch-range').value=this.value">
 </div>
 <div>
+  <label for="sample-enable">Sample</label>
+  <input type="checkbox" checked id="sample-enable">
   <select id="effect">
     <option>0: Arpeggio</option>
     <option>1: Port Up</option>
@@ -190,8 +192,10 @@
       let samplesElem = query('#samples');
       samplesElem.textContent = '';
       for (let [i, sample] of module.samples.entries()) {
+        if (!sample) continue;
         let option = document.createElement('option')
-        option.textContent = i + ': ' + (sample ? sample.name : '(none)');
+        option.textContent = `${i}: ${sample.name}`;
+        option.value = i;
         samplesElem.appendChild(option);
       }
       if (samplesElem.selectedIndex == -1)
@@ -263,9 +267,8 @@
     if (e)
       e.preventDefault();
     if (playback) {
-      let s = query('#samples').selectedIndex;
-      if (s > 0)
-        jamPlay(playback, s, query('#jam-pitch').valueAsNumber);
+      let s = Number(query('#samples').value);
+      jamPlay(playback, s, query('#jam-pitch').valueAsNumber);
     }
   }
 
@@ -368,7 +371,8 @@
     let cell = new Cell();
     if (query('#pitch-enable').checked)
       cell.pitch = query('#jam-pitch').valueAsNumber;
-    cell.sample = query('#samples').selectedIndex;
+    if (query('#sample-enable').checked)
+      cell.sample = Number(query('#samples').value);
     cell.effect = query('#effect').selectedIndex;
     cell.param = query('#param0').selectedIndex << 4;
     cell.param |= query('#param1').selectedIndex;
@@ -390,11 +394,11 @@
   function liftCell() {
     let cell = module.patterns[selPattern()][selChannel][selRow];
     query('#pitch-enable').checked = cell.pitch >= 0;
-    if (cell.pitch >= 0) {
+    if (cell.pitch >= 0)
       query('#jam-pitch').value = cell.pitch;
-    }
+    query('#sample-enable').checked = cell.sample;
     if (cell.sample)
-      query('#samples').selectedIndex = cell.sample;
+      query('#samples').value = cell.sample;
     query('#effect').selectedIndex = cell.effect;
     query('#param0').selectedIndex = cell.param >> 4;
     query('#param1').selectedIndex = cell.param & 0xf;
