--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
     <option>E</option>
     <option>F</option>
   </select>
+  <button onclick="resetEffect()">Reset</button>
 </div>
 <div style="display:flex">
   <button style="flex-grow:1" onmousedown="jamDown(event)" onmouseup="jamUp(event)"
@@ -365,6 +366,12 @@
       playback.module = module;
     refreshSequence();
     refreshPattern();
+  }
+
+  function resetEffect() {
+    query('#effect').selectedIndex = 0;
+    query('#param0').selectedIndex = 0;
+    query('#param1').selectedIndex = 0;
   }
 
   function writeCell() {
