--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     margin:0;
     overflow: hidden;
     position: fixed;
+    display: flex;
+    flex-direction: column;
   }
   td {
     border: 1px solid black;
@@ -29,118 +31,120 @@
 <script src="src/PatternView.js"></script>
 <script src="src/PatternEdit.js"></script>
 
+<body>
 <div>
-  <input id="file-select" type="file">
-  <button onclick="loadFile()">Load</button>
-  <button onclick="saveFile()">Save</button>
+  <div>
+    <input id="file-select" type="file">
+    <button onclick="loadFile()">Load</button>
+    <button onclick="saveFile()">Save</button>
+  </div>
+  <div>
+    <button onclick="play()">Play</button>
+    <button onclick="play(true)">Play from</button>
+    <button onclick="stop()">Stop</button>
+    <button onclick="patternZap()">Pattern Zap</button>
+  </div>
+  <div>Title: <span id="title"></span></div>
+  <select id="sequence" size="10" style="width:30pt" oninput="refreshPattern()"></select>
+  <select id="samples" size="10" style="width:130pt"></select>
+  <div>
+    <input type="checkbox" checked id="follow">
+    <label for="follow">Follow playback</label>
+  </div>
+  <div>
+    Tempo: <input style="width:36pt;" type="number" id="tempo">
+    Speed: <input style="width:36pt;" type="number" id="speed">
+  </div>
+  <div>
+    <input type="checkbox" onchange="muteCheck(0, this.checked)" checked>
+    <input type="checkbox" onchange="muteCheck(1, this.checked)" checked>
+    <input type="checkbox" onchange="muteCheck(2, this.checked)" checked>
+    <input type="checkbox" onchange="muteCheck(3, this.checked)" checked>
+  </div>
 </div>
-<div>
-  <button onclick="play()">Play</button>
-  <button onclick="play(true)">Play from</button>
-  <button onclick="stop()">Stop</button>
-  <button onclick="patternZap()">Pattern Zap</button>
-</div>
-<div>Title: <span id="title"></span></div>
-<select id="sequence" size="10" style="width:30pt" oninput="refreshPattern()"></select>
-<select id="samples" size="10" style="width:130pt"></select>
-<div>
-  <input type="checkbox" checked id="follow">
-  <label for="follow">Follow playback</label>
-</div>
-<div>
-  Tempo: <input style="width:36pt;" type="number" id="tempo">
-  Speed: <input style="width:36pt;" type="number" id="speed">
-</div>
-<div>Active samplers: <span id="samplers"></span></div>
-<div>Time: <span id="time"></span></div>
-<div>Queued time: <span id="queued"></span></div>
-<div>
-  <input type="checkbox" onchange="muteCheck(0, this.checked)" checked>
-  <input type="checkbox" onchange="muteCheck(1, this.checked)" checked>
-  <input type="checkbox" onchange="muteCheck(2, this.checked)" checked>
-  <input type="checkbox" onchange="muteCheck(3, this.checked)" checked>
-</div>
-<div style="display:flex">
-  <label for="pitch-enable">Pitch</label>
-  <input type="checkbox" checked id="pitch-enable">
-  <input style="flex-grow:1" type="range" min="0" max="59" id="jam-pitch-range"
-    oninput="query('#jam-pitch').value=this.value;jamUp();jamDown()"
-    onmousedown="jamDown()" onmouseup="jamUp()" ontouchstart="jamDown()" ontouchend="jamUp()">
-  <input style="width:36pt;" type="number" value="36" id="jam-pitch" oninput="query('#jam-pitch-range').value=this.value">
-</div>
-<div>
-  <label for="sample-enable">Sample</label>
-  <input type="checkbox" checked id="sample-enable">
-  <select id="effect">
-    <option>0: Arpeggio</option>
-    <option>1: Port Up</option>
-    <option>2: Port Down</option>
-    <option>3: Tone Port</option>
-    <option>4: Vibrato</option>
-    <option>5: Volslide+Toneport</option>
-    <option>6: Volslide+Vibrato</option>
-    <option>7: Tremolo</option>
-    <option>8: Panning</option>
-    <option>9: Offset</option>
-    <option>A: Volume Slide</option>
-    <option>B: Position Jump</option>
-    <option>C: Volume</option>
-    <option>D: Pattern Break</option>
-    <option>E: Extended</option>
-    <option>F: Tempo</option>
-  </select>
-  <select id="param0">
-    <option>0</option>
-    <option>1</option>
-    <option>2</option>
-    <option>3</option>
-    <option>4</option>
-    <option>5</option>
-    <option>6</option>
-    <option>7</option>
-    <option>8</option>
-    <option>9</option>
-    <option>A</option>
-    <option>B</option>
-    <option>C</option>
-    <option>D</option>
-    <option>E</option>
-    <option>F</option>
-  </select>
-  <select id="param1">
-    <option>0</option>
-    <option>1</option>
-    <option>2</option>
-    <option>3</option>
-    <option>4</option>
-    <option>5</option>
-    <option>6</option>
-    <option>7</option>
-    <option>8</option>
-    <option>9</option>
-    <option>A</option>
-    <option>B</option>
-    <option>C</option>
-    <option>D</option>
-    <option>E</option>
-    <option>F</option>
-  </select>
-  <button onclick="resetEffect()">Reset</button>
-</div>
-<div style="display:flex">
-  <button style="flex-grow:1" onmousedown="jamDown(event)" onmouseup="jamUp(event)"
-    ontouchstart="jamDown(event)" ontouchend="jamUp(event)">Jam</button>
-  <button style="flex-grow:1" onmousedown="jamDown(event); writeCell()" onmouseup="jamUp(event)"
-    ontouchstart="jamDown(event); writeCell()" ontouchend="jamUp(event)">Write</button>
-  <button style="flex-grow:1" onclick="clearCell()">Clear</button>
-  <button style="flex-grow:1" onmousedown="liftCell(); jamDown(event)" onmouseup="jamUp(event)"
-    ontouchstart="liftCell(); jamDown(event)" ontouchend="jamUp(event)">Lift</button>
-</div>
-<div style="height:200pt; overflow-y:auto;">
+<div style="flex-grow:1; height:200pt; overflow-y:auto;">
   <table id="pattern-table" style="font-family:monospace;"></table>
 </div>
-<div id="errors">
-  Errors:<br>
+<div>
+  <div id="errors">
+    Errors:<br>
+  </div>
+  <div style="display:flex">
+    <label for="pitch-enable">Pitch</label>
+    <input type="checkbox" checked id="pitch-enable">
+    <input style="flex-grow:1" type="range" min="0" max="59" id="jam-pitch-range"
+      oninput="query('#jam-pitch').value=this.value;jamUp();jamDown()"
+      onmousedown="jamDown()" onmouseup="jamUp()" ontouchstart="jamDown()" ontouchend="jamUp()">
+    <input style="width:36pt;" type="number" value="36" id="jam-pitch" oninput="query('#jam-pitch-range').value=this.value">
+  </div>
+  <div>
+    <label for="sample-enable">Sample</label>
+    <input type="checkbox" checked id="sample-enable">
+    <select id="effect">
+      <option>0: Arpeggio</option>
+      <option>1: Port Up</option>
+      <option>2: Port Down</option>
+      <option>3: Tone Port</option>
+      <option>4: Vibrato</option>
+      <option>5: Volslide+Port</option>
+      <option>6: Volslide+Vib</option>
+      <option>7: Tremolo</option>
+      <option>8: Panning</option>
+      <option>9: Offset</option>
+      <option>A: Volume Slide</option>
+      <option>B: Position Jump</option>
+      <option>C: Volume</option>
+      <option>D: Pattern Break</option>
+      <option>E: Extended</option>
+      <option>F: Tempo</option>
+    </select>
+    <select id="param0">
+      <option>0</option>
+      <option>1</option>
+      <option>2</option>
+      <option>3</option>
+      <option>4</option>
+      <option>5</option>
+      <option>6</option>
+      <option>7</option>
+      <option>8</option>
+      <option>9</option>
+      <option>A</option>
+      <option>B</option>
+      <option>C</option>
+      <option>D</option>
+      <option>E</option>
+      <option>F</option>
+    </select>
+    <select id="param1">
+      <option>0</option>
+      <option>1</option>
+      <option>2</option>
+      <option>3</option>
+      <option>4</option>
+      <option>5</option>
+      <option>6</option>
+      <option>7</option>
+      <option>8</option>
+      <option>9</option>
+      <option>A</option>
+      <option>B</option>
+      <option>C</option>
+      <option>D</option>
+      <option>E</option>
+      <option>F</option>
+    </select>
+    <button onclick="resetEffect()">Reset</button>
+  </div>
+  <div style="display:flex">
+    <button style="flex-grow:1" onmousedown="jamDown(event)" onmouseup="jamUp(event)"
+      ontouchstart="jamDown(event)" ontouchend="jamUp(event)">Jam</button>
+    <button style="flex-grow:1" onmousedown="jamDown(event); writeCell()" onmouseup="jamUp(event)"
+      ontouchstart="jamDown(event); writeCell()" ontouchend="jamUp(event)">Write</button>
+    <button style="flex-grow:1" onclick="clearCell()">Clear</button>
+    <button style="flex-grow:1" onmousedown="liftCell(); jamDown(event)" onmouseup="jamUp(event)"
+      ontouchstart="liftCell(); jamDown(event)" ontouchend="jamUp(event)">Lift</button>
+  </div>
 </div>
 
 <script>
@@ -239,7 +243,6 @@
           let {tempo, speed} = playback;
           queuedLines.push({time: queuedTime, pos, row, tempo, speed});
         }
-        query('#queued').textContent = queuedTime.toFixed(3);
       };
       process();
       intervalHandle = setInterval(process, 200);
@@ -309,11 +312,6 @@
       if (selPattern() == module.sequence[curLine.pos])
         query('#pattern-table').children[curLine.row].classList.add('hilite-row');
     }
-    let activeSources = 0;
-    for (let channel of playback.channels)
-      activeSources += channel.activeSources.size;
-    query('#samplers').textContent = activeSources;
-    query('#time').textContent = context.currentTime.toFixed(3);
   }
 
   function selPattern() {
@@ -411,3 +409,4 @@
     query('#param1').selectedIndex = cell.param & 0xf;
   }
 </script>
+</body>
