--- a/index.html
+++ b/index.html
@@ -206,7 +206,12 @@
       if (samplesElem.selectedIndex == -1)
         samplesElem.selectedIndex = 0;
 
-      play();
+      if (!context) {
+        let AudioContext = window.AudioContext || window.webkitAudioContext;
+        context = new AudioContext({latencyHint: 'interactive'});
+      }
+      playback = initPlayback(context, module);
+      context.resume();
     };
     reader.readAsArrayBuffer(blob);
   }
@@ -219,10 +224,6 @@
   function play(resume) {
     if (!module)
       return;
-    if (!context) {
-      let AudioContext = window.AudioContext || window.webkitAudioContext;
-      context = new AudioContext({latencyHint: 'interactive'});
-    }
     // for iOS:
     context.resume().then(() => {
       if (intervalHandle)
@@ -248,7 +249,7 @@
       intervalHandle = setInterval(process, 200);
 
       animHandle = requestAnimationFrame(update);
-    })
+    });
   }
 
   function stop() {
