Everything is flex

--- a/index.html
+++ b/index.html
@@ -13,26 +13,30 @@
 <script src="src/PatternEdit.js"></script>
 
 <body>
-<div>
-  <div>
+<div class="vflex">
+  <div class="hflex">
     <input id="file-select" type="file">
     <button onclick="loadFile()">Load</button>
     <button onclick="saveFile()">Save</button>
   </div>
-  <div>
+  <div class="hflex">
     <button onclick="play()">Play</button>
     <button onclick="play(true)">Play from</button>
     <button onclick="pause()">Stop</button>
     <button onclick="patternZap()">Pattern Zap</button>
   </div>
-  <div>Title: <span id="title"></span></div>
-  <select id="sequence" size="10" style="width:30pt" oninput="refreshPattern()"></select>
-  <select id="samples" size="10" style="width:130pt"></select>
-  <div>
+  <div class="hflex">
+    Title: <span id="title"></span>
+  </div>
+  <div class="hflex">
+    <select id="sequence" size="10" style="width:30pt" oninput="refreshPattern()"></select>
+    <select id="samples" size="10" style="width:130pt"></select>
+  </div>
+  <div class="hflex">
     <input type="checkbox" checked id="follow">
     <label for="follow">Follow playback</label>
   </div>
-  <div>
+  <div class="hflex">
     Tempo: <input style="width:36pt;" type="number" id="tempo">
     Speed: <input style="width:36pt;" type="number" id="speed">
   </div>
@@ -43,26 +47,26 @@
     <input type="checkbox" onchange="muteCheck(3, this.checked)" checked>
   </div>
 </div>
-<div style="flex-grow:1; height:200pt; overflow-y:auto;" id="pattern-scroll">
+<div class="vflex" style="flex-grow:1; height:200pt; overflow-y:auto;" id="pattern-scroll">
   <div style="height:50%"></div>
   <table id="pattern-table" style="font-family:monospace;"></table>
   <div style="height:50%"></div>
 </div>
-<div>
+<div class="vflex">
   <div id="errors">
     Errors:<br>
   </div>
-  <div style="display:flex">
-    <label for="pitch-enable">Pitch</label>
+  <div class="hflex">
     <input type="checkbox" checked id="pitch-enable">
+    <label for="pitch-enable">Pitch</label>
     <input style="flex-grow:1" type="range" min="0" max="59" id="jam-pitch-range"
       oninput="query('#jam-pitch').value=this.value;jamUp();jamDown()"
       onmousedown="jamDown()" onmouseup="jamUp()" ontouchstart="jamDown()" ontouchend="jamUp()">
     <input style="width:36pt;" type="number" value="36" id="jam-pitch" oninput="query('#jam-pitch-range').value=this.value">
   </div>
-  <div>
-    <label for="sample-enable">Sample</label>
+  <div class="hflex">
     <input type="checkbox" checked id="sample-enable">
+    <label for="sample-enable">Sample</label>
     <select id="effect">
       <option>0: Arpeggio</option>
       <option>1: Port Up</option>
@@ -119,7 +123,7 @@
     </select>
     <button onclick="resetEffect()">Reset</button>
   </div>
-  <div style="display:flex">
+  <div class="hflex">
     <button style="flex-grow:1" onmousedown="jamDown(event)" onmouseup="jamUp(event)"
       ontouchstart="jamDown(event)" ontouchend="jamUp(event)">Jam</button>
     <button style="flex-grow:1" onmousedown="jamDown(event); writeCell()" onmouseup="jamUp(event)"
