Don't need to set pattern area height

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <input type="checkbox" onchange="muteCheck(3, this.checked)" checked>
   </div>
 </div>
-<div style="flex-grow:1; height:200pt; overflow-x:auto; overflow-y:auto;" id="pattern-scroll">
+<div style="flex-grow:1; overflow-x:auto; overflow-y:auto;" id="pattern-scroll">
   <div style="height:50%"></div>
   <table id="pattern-table" style="font-family:monospace;"></table>
   <div style="height:50%"></div>
