--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
     <select id="samples" size="10" style="width:130pt"></select>
   </div>
   <div class="hflex">
-    <input type="checkbox" checked id="follow">
-    <label for="follow">Follow playback</label>
+    <label>
+      <input type="checkbox" checked id="follow">
+      Follow playback
+    </label>
   </div>
   <div class="hflex">
     Tempo: <input style="width:36pt;" type="number" id="tempo">
@@ -57,16 +59,20 @@
     Errors:<br>
   </div>
   <div class="hflex">
-    <input type="checkbox" checked id="pitch-enable">
-    <label for="pitch-enable">Pitch</label>
+    <label>
+      <input type="checkbox" checked id="pitch-enable">
+      Pitch
+    </label>
     <input style="flex-grow:1" type="range" min="0" max="59" id="jam-pitch-range"
       oninput="query('#jam-pitch').value=this.value;jamUp();jamDown()"
       onmousedown="jamDown()" onmouseup="jamUp()" ontouchstart="jamDown()" ontouchend="jamUp()">
     <input style="width:36pt;" type="number" value="36" id="jam-pitch" oninput="query('#jam-pitch-range').value=this.value">
   </div>
   <div class="hflex">
-    <input type="checkbox" checked id="sample-enable">
-    <label for="sample-enable">Sample</label>
+    <label>
+      <input type="checkbox" checked id="sample-enable">
+      Sample
+    </label>
     <select id="effect">
       <option>0: Arpeggio</option>
       <option>1: Port Up</option>
