--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
     <button onclick="patternZap()">Pattern Zap</button>
   </div>
   <div class="hflex">
-    Title: <span id="title"></span>
+    <label>
+      Title:
+      <output id="title"></output>
+    </label>
   </div>
   <div class="hflex">
     <select id="sequence" size="10" style="width:30pt" oninput="refreshPattern()"></select>
@@ -39,8 +42,14 @@
     </label>
   </div>
   <div class="hflex">
-    Tempo: <input style="width:36pt;" type="number" id="tempo">
-    Speed: <input style="width:36pt;" type="number" id="speed">
+    <label>
+      Tempo:
+      <input style="width:36pt;" type="number" id="tempo">
+    </label>
+    <label>
+      Speed:
+      <input style="width:36pt;" type="number" id="speed">
+    </label>
   </div>
   <div>
     <input type="checkbox" onchange="muteCheck(0, this.checked)" checked>
