--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
   </div>
   <div class="hflex">
     <select id="sequence" size="10" style="width:30pt" oninput="refreshPattern()"></select>
-    <select id="samples" size="10" style="width:130pt"></select>
   </div>
   <div class="hflex">
     <label>
@@ -83,6 +82,7 @@
       <input type="checkbox" checked id="sampleEnable">
       Sample
     </label>
+    <span id="sampleList" class="hflex" style="flex-wrap:wrap"></span>
   </form>
   <form id="effectEntry" class="hflex">
     <select id="effect">
