--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
     <input type="checkbox" onchange="muteCheck(3, this.checked)" checked>
   </div>
 </form>
-<div style="flex-grow:1; overflow-x:auto; overflow-y:auto;" id="pattern-scroll">
+<div style="flex-grow:1; overflow-x:auto; overflow-y:auto;" id="patternScroll">
   <div style="height:50%"></div>
-  <table id="pattern-table" style="font-family:monospace;"></table>
+  <table id="patternTable" style="font-family:monospace;"></table>
   <div style="height:50%"></div>
 </div>
 <div class="vflex">
