--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </label>
   </div>
   <div class="hflex">
-    <select id="sequence" size="10" style="width:30pt" oninput="refreshPattern()"></select>
+    <select class="hselect" id="sequence" size="2" oninput="refreshPattern()"></select>
   </div>
   <div class="hflex">
     <label>
