--- a/index.html
+++ b/index.html
@@ -143,12 +143,12 @@
   </form>
   <div class="hflex">
     <button style="flex-grow:1" onmousedown="jamDown()" onmouseup="jamUp()"
-      ontouchstart="jamDown()" ontouchend="jamUp()">Jam</button>
+      ontouchstart="jamDown(event)" ontouchend="jamUp(event)">Jam</button>
     <button style="flex-grow:1" onmousedown="jamDown(); writeCell()" onmouseup="jamUp()"
-      ontouchstart="jamDown(); writeCell()" ontouchend="jamUp()">Write</button>
+      ontouchstart="jamDown(event); writeCell()" ontouchend="jamUp(event)">Write</button>
     <button style="flex-grow:1" onclick="clearCell()">Clear</button>
     <button style="flex-grow:1" onmousedown="liftCell(); jamDown()" onmouseup="jamUp()"
-      ontouchstart="liftCell(); jamDown()" ontouchend="jamUp()">Lift</button>
+      ontouchstart="liftCell(); jamDown(event)" ontouchend="jamUp(event)">Lift</button>
   </div>
 </div>
 
