restore mute state

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       Follow playback
     </label>
   </div>
-  <div>
+  <div id="mute">
     <input type="checkbox" onchange="muteCheck(0, this.checked)" checked>
     <input type="checkbox" onchange="muteCheck(1, this.checked)" checked>
     <input type="checkbox" onchange="muteCheck(2, this.checked)" checked>
