--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   </div>
   <div class="hflex">
     <button type="button" onclick="play()">Play</button>
+    <button type="button" onclick="play(false, true)">Pattern</button>
     <button type="button" onclick="play(true)">Play from</button>
     <button type="button" onclick="pause()">Stop</button>
     <button type="button" onclick="patternZap()">Pattern Zap</button>
