Fix tempo/speed default values

--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
   <div class="hflex">
     <label>
       Tempo:
-      <input style="width:36pt;" type="number" id="tempo">
+      <input style="width:36pt;" type="number" value="125" id="tempo">
     </label>
     <label>
       Speed:
-      <input style="width:36pt;" type="number" id="speed">
+      <input style="width:36pt;" type="number" value="6" id="speed">
     </label>
     <label>
       <input type="checkbox" checked id="follow">
@@ -101,7 +101,7 @@
       <option>9: Offset</option>
       <option>A: Volume Slide</option>
       <option>B: Position Jump</option>
-      <option>C: Volume</option>
+      <option selected>C: Volume</option>
       <option>D: Pattern Break</option>
       <option>E: Extended</option>
       <option>F: Tempo</option>
