effectEnable should not be checked

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   </form>
   <form id="effectEntry" class="hflex">
     <label>
-      <input type="checkbox" checked id="effectEnable">
+      <input type="checkbox" id="effectEnable">
       Effect
     </label>
     <select id="effect">
