Use template for radio buttons

--- a/index.html
+++ b/index.html
@@ -151,5 +151,14 @@
   </div>
 </div>
 
+<!-- Templates -->
+
+<template id="radioButtonTemplate">
+  <label class="radio-box">
+    <input type="radio">
+    <span></span>
+  </label>
+</template>
+
 <script src="index.js"></script>
 </body>
