Use template for pattern cells

--- a/index.html
+++ b/index.html
@@ -159,6 +159,13 @@
     <span></span>
   </label>
 </template>
+<template id="cellTemplate">
+  <td class="pattern-cell">
+    <span id="pitch" class="cell-pitch"></span>
+    <span id="inst" class="cell-inst"></span>
+    <span id="effect" class="cell-effect"></span>
+  </td>
+</template>
 
 <script src="index.js"></script>
 </body>
