--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <input type="checkbox" onchange="muteCheck(3, this.checked)" checked>
   </div>
 </form>
-<div style="flex-grow:1; overflow-x:auto; overflow-y:auto;" id="patternScroll">
+<div style="flex:1 0 0; overflow-x:auto; overflow-y:auto;" id="patternScroll">
   <div style="height:50%"></div>
   <table id="patternTable"></table>
   <div style="height:50%"></div>
@@ -75,7 +75,7 @@
       <input type="checkbox" checked id="pitchEnable" onchange="updateEntryParts()">
       Pitch
     </label>
-    <input style="flex-grow:1" type="range" min="0" max="59" value="36" id="jamPitch">
+    <input style="flex:1" type="range" min="0" max="59" value="36" id="jamPitch">
   </form>
   <form id="sampleEntry" class="hflex">
     <label>
@@ -145,9 +145,9 @@
     </select>
   </form>
   <div class="hflex">
-    <button id="write" style="flex-grow:1">Write</button>
-    <button id="clear" style="flex-grow:1">Clear</button>
-    <button id="lift" style="flex-grow:1">Lift</button>
+    <button id="write" style="flex:1">Write</button>
+    <button id="clear" style="flex:1">Clear</button>
+    <button id="lift" style="flex:1">Lift</button>
   </div>
 </div>
 
