--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <input type="checkbox" onchange="muteCheck(3, this.checked)" checked>
   </div>
 </form>
-<div style="flex:1 0 0; overflow-x:auto; overflow-y:auto;" id="patternScroll">
+<div class="scrollable" style="flex:1 0 0" id="patternScroll">
   <div style="height:50%"></div>
   <table id="patternTable"></table>
   <div style="height:50%"></div>
