Icon for pattern loop

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </button>
     <label class="label-button">
       <input type="checkbox" id="patternLoop">
-      <span>Loop pattern</span>
+      <span><img class="icon" src="assets/repeat-variant.svg"></span>
     </label>
     <button type="button" onclick="patternZap()">Pattern Zap</button>
   </div>
